--- a/contacts.html
+++ b/contacts.html
@@ -12,6 +12,16 @@
 </div>
 <div id="content">
 	<h1>Friends Contact</h1>
+	<center>
+	<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+	   Tempora ducimus omnis tenetur quos nisi unde recusandae architecto
+	   eius est voluptatem assumenda perferendis repudiandae veniam veritatis voluptates,
+	   maiores placeat officiis sint.</p>
+	   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+			Tempora ducimus omnis tenetur quos nisi unde recusandae architecto
+			eius est voluptatem assumenda perferendis repudiandae veniam veritatis voluptates,
+			maiores placeat officiis sint.</p>
+		</center>
 	 <table style="width:60%" border="2"  >
   
 
