--- a/profile.html
+++ b/profile.html
@@ -26,7 +26,16 @@
 	 	</pre>
 	 </h3>
 	 
-	 	
+	 <center>
+			<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+			   Tempora ducimus omnis tenetur quos nisi unde recusandae architecto
+			   eius est voluptatem assumenda perferendis repudiandae veniam veritatis voluptates,
+			   maiores placeat officiis sint.</p>
+			   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+					Tempora ducimus omnis tenetur quos nisi unde recusandae architecto
+					eius est voluptatem assumenda perferendis repudiandae veniam veritatis voluptates,
+					maiores placeat officiis sint.</p>
+				</center>
 
 
 	 
