--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
 	<head>
 		<meta charset="UTF-8">
 		<title></title>
-		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+		<meta http-equiv="content-type" content="asset/text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
-		<script src="js/jquery.min.js"></script>
-		<script src="js/skel.min.js"></script>
-		<script src="js/skel-layers.min.js"></script>
-		<script src="js/init.js"></script>
+		<script src="asset/js/jquery.min.js"></script>
+		<script src="asset/js/skel.min.js"></script>
+		<script src="asset/js/skel-layers.min.js"></script>
+		<script src="asset/js/init.js"></script>
 		<noscript>
-			<link rel="stylesheet" href="css/skel.css" />
-			<link rel="stylesheet" href="css/style.css" />
-			<link rel="stylesheet" href="css/style-xlarge.css" />
+			<link rel="stylesheet" href="asset/css/skel.css" />
+			<link rel="stylesheet" href="asset/css/style.css" />
+			<link rel="stylesheet" href="asset/css/style-xlarge.css" />
 		</noscript>
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 	</head>
@@ -30,9 +30,9 @@
 				<h1><a href="index.html"></a></h1>
 				<nav id="nav">
 					<ul>
-						<li><a href="home.html">Home</a></li>
+						<li><a href="index.html">Home</a></li>
 						<li><a href="blog.html">Blog</a></li>
-						<li><a href="index.html">Logout</a></li>
+						<li><a href="login.html">Logout</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -58,12 +58,12 @@
 					</header>
 					<div class="row">
 						<section class="feature 6u 12u$(small)">
-							<img class="image fit" src="images/jjj.jpg" alt="" />
+							<img class="image fit" src="asset/images/jjj.jpg" alt="" />
 							<h3 class="title">Lorem ipsum dolor</h3>
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore ipsa voluptate, quae quibusdam. Doloremque similique, reiciendis sit quibusdam aperiam? Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 						</section>
 						<section class="feature 6u$ 12u$(small)">
-							<img class="image fit" src="images/jjj.jpg" alt="" />
+							<img class="image fit" src="asset/images/jjj.jpg" alt="" />
 							<h3 class="title">Esse, fugiat, in</h3>
 							<p>Natus perspiciatis fugit illum porro iusto fuga nam voluptas minima voluptates deserunt, veniam reiciendis harum repellat necessitatibus. Animi, adipisci qui. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 						
