--- a/login.html
+++ b/login.html
@@ -6,8 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->	
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="css/login/util.css">
-	<link rel="stylesheet" type="text/css" href="css/login/main.css">
+	<link rel="stylesheet" type="asset/text/css" href="asset/ss/login/util.css">
+	<link rel="stylesheet" type="asset/text/css" href="asset/css/login/main.css">
 <!--===============================================================================================-->
 </head>
 <body>
@@ -30,13 +30,13 @@
 					</div>
 					
 					<div class="container-login100-form-btn">
-						<button class="login100-form-btn" formaction="home.html">
+						<button class="asset/login100-form-btn" formaction="index.html">
 							Sign in
 						</button>
 					</div>
 				</form>
 
-				<div class="login100-more" style="background-image: url('img/jj.jpg');"></div>
+				<div class="login100-more" style="background-image: url('asset/img/jj.jpg');"></div>
 			</div>
 		</div>
 	</div>
